--- a/index.html
+++ b/index.html
@@ -1,19 +1,21 @@
 <!doctype html>
-<html lang="pt-BR">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Thalyson | Desenvolvedor</title>
-    <meta name="description" content="Thalyson - Desenvolvedor apaixonado por criar experiências digitais únicas e memoráveis." />
-    <meta name="author" content="Thalyson" />
+    <!-- TODO: Set the document title to the name of your application -->
+    <title>Lovable App</title>
+    <meta name="description" content="Lovable Generated Project" />
+    <meta name="author" content="Lovable" />
 
-    <meta property="og:title" content="Thalyson | Desenvolvedor" />
-    <meta property="og:description" content="Desenvolvedor apaixonado por criar experiências digitais únicas e memoráveis." />
+    <!-- TODO: Update og:title to match your application name -->
+    <meta property="og:title" content="Lovable App" />
+    <meta property="og:description" content="Lovable Generated Project" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Thalyson" />
+    <meta name="twitter:site" content="@Lovable" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
